[package]
name = "charsets"
version = "0.2.0"
authors = ["Pyfisch <pyfisch@gmail.com>"]
description = "An enum representing all charset names commonly used."
readme = "README.md"
documentation = "http://pyfisch.github.io/rust-charsets/rust-charsets/index.html"
repository = "https://github.com/pyfisch/rust-charsets"
license = "MIT"
keywords = ["http", "charset", "encoding", "mime", "media-types"]
